# TradingAgents

./: .gitignore  CLAUDE.md  pyproject.toml
cli/: main.py
docs/: langchain-langgraph-learning.md  rust-tradingagents-design.md  架构设计文档.md  端到端案例文档.md  需求分析文档.md
reports/01810.HK_20260512_135855/: complete_report.md
reports/01810.HK_20260512_135855/1_analysts/: fundamentals.md  market.md  news.md  sentiment.md
reports/01810.HK_20260512_135855/2_research/: bear.md  bull.md  manager.md
reports/01810.HK_20260512_135855/3_trading/: trader.md
reports/01810.HK_20260512_135855/4_risk/: aggressive.md  conservative.md  neutral.md
reports/01810.HK_20260512_135855/5_portfolio/: decision.md
reports/03690.HK_20260512_173937/: complete_report.html  complete_report.md  index.html
reports/03690.HK_20260512_173937/1_analysts/: fundamentals.html  fundamentals.md  market.html  market.md  news.html  news.md  sentiment.html  sentiment.md
reports/03690.HK_20260512_173937/2_research/: bear.html  bear.md  bull.html  bull.md  manager.html  manager.md
reports/03690.HK_20260512_173937/3_trading/: trader.html  trader.md
reports/03690.HK_20260512_173937/4_risk/: aggressive.md  (+5 more)
reports/0700.HK_20260512_122733/: complete_report.md
service/: .env.example  CLAUDE.md  README.md  pyproject.toml
service/app/: config.py  main.py
service/app/db/: session.py
service/app/models/: analysis.py
service/app/routers/: analysis.py
service/app/schemas/: analysis.py
service/app/services/: analysis_service.py
service/rest/: index.rest
service/tests/: conftest.py  test_analysis.py
(+14 files in other folders)
